# pattikadhai

./: .gitignore  README.md  index.html  package-lock.json  package.json
crates/kokoro-tts/: Cargo.toml
crates/kokoro-tts/src/: audio.rs  lib.rs  model.rs  phonemize.rs  tokenize.rs  voices.rs
scripts/: pyproject.toml
scripts/music/: check_model.py  download_model.py  generate_music.py  pyproject.toml
scripts/tts/: check_model.py  config.py  download_model.py  pyproject.toml  tts_generate.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_seed_genres.sql  003_seed_stories.sql  004_app_settings.sql  005_kokoro_voice_settings.sql  006_kittentts_voice_settings.sql  007_kokoro_onnx_voice_settings.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: audio.rs  health.rs  mod.rs  stories.rs
src-tauri/src/db/: models.rs  queries.rs
src-tauri/src/services/: health.rs  mixer.rs  mod.rs  music.rs  ollama.rs  pipeline.rs  process.rs  prompts.rs  tts.rs
src-tauri/tests/: integration.rs
src/__tests__/: app.test.ts
src/components/audio/: AudioGenerator.tsx  AudioProgress.tsx  StoryPlayer.tsx
src/components/layout/: AppShell.tsx
src/components/settings/: VoiceSettings.tsx
src/components/setup/: DependencyStep.tsx  SetupWizard.tsx
src/components/story/: GenreSelector.tsx  HighlightedText.tsx  StoryDetail.tsx  StoryGenerator.tsx  StoryLibrary.tsx
src/components/ui/: progress.tsx
src/hooks/: useAudioGeneration.ts  useAudioHighlight.ts  useDatabase.ts  useDependencyCheck.ts  useStoryGeneration.ts  useStreamingAudio.ts  useTheme.ts  useVoiceSettings.ts
src/lib/: api.ts  audio.ts  constants.ts  database.ts  timing.ts
src/types/: index.ts
