[package]
name = "pattikadhai"
version = "0.1.0"
edition = "2021"
description = "PattiKadhai - Kids Story Generator"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = { version = "2" }
tauri-plugin-shell = { version = "2" }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
log = "0.4"
dirs = "5"
tauri-plugin-log = "2.8.0"
tauri-plugin-fs = "2.4.5"

[dev-dependencies]
proptest = "1"

[lib]
name = "pattikadhai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
