[project]
name = "pattikadhai-music"
version = "0.1.0"
description = "PattiKadhai music generation script (ACE-Step)"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ace-step @ git+https://github.com/ace-step/ACE-Step-1.5.git",
    "soundfile",
    "numpy",
]

[tool.uv]
dev-dependencies = []
environments = ["sys_platform == 'darwin' and platform_machine == 'arm64'"]
